[package]
name = "bevy_full_throttle"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.30", features = ["Win32_System_Power", "Win32_System_Registry", "Win32_System_SystemServices"] }